--- a/vibevault-react/package.json
+++ b/vibevault-react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
     "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
